--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -77,7 +77,7 @@ jobs:
             PR_BODY="(No PR description provided.)"
           fi
 
-          UPDATE_TEXT="PR: $PR_URL\n\n$PR_BODY"
+          UPDATE_TEXT=$(printf "PR: %s\n\n%s" "$PR_URL" "$PR_BODY")
 
           echo "Adding update..."
 
