--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Create Monday item and add formatted PR update
+      - name: Create Monday item and formatted update
         env:
           MONDAY_API_TOKEN: ${{ secrets.MONDAY_API_TOKEN }}
           MONDAY_BOARD_ID: ${{ secrets.MONDAY_PRODUCT_CHANGE_LOG_BOARD_ID }}
@@ -25,8 +25,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          echo "Fetching author display name..."
-
+          # Fetch author display name
           AUTHOR_NAME=$(curl -s \
             -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
@@ -36,10 +35,7 @@ jobs:
             AUTHOR_NAME="$AUTHOR_LOGIN"
           fi
 
-          echo "Author resolved as: $AUTHOR_NAME"
-
-          echo "Building column values..."
-
+          # Build Monday column values (stringified JSON)
           COLUMN_VALUES=$(jq -n \
             --arg author "$AUTHOR_NAME" \
             --arg product "Contact Centre" \
@@ -48,8 +44,7 @@ jobs:
               dropdown_mm0m14q0: { labels: [$product] }
             }' | jq -c .)
 
-          echo "Creating Monday item..."
-
+          # Create item
           CREATE_ITEM_PAYLOAD=$(jq -n \
             --arg query 'mutation ($boardId: ID!, $itemName: String!, $columnVals: JSON!) { create_item(board_id: $boardId, item_name: $itemName, column_values: $columnVals) { id } }' \
             --arg boardId "$MONDAY_BOARD_ID" \
@@ -62,33 +57,26 @@ jobs:
             -H "Content-Type: application/json" \
             -d "$CREATE_ITEM_PAYLOAD")
 
-          echo "$CREATE_ITEM_RESP"
-
           ITEM_ID=$(echo "$CREATE_ITEM_RESP" | jq -r '.data.create_item.id')
 
           if [ -z "$ITEM_ID" ] || [ "$ITEM_ID" = "null" ]; then
             echo "Failed to create Monday item"
+            echo "$CREATE_ITEM_RESP"
             exit 1
           fi
-
-          echo "Item created: $ITEM_ID"
 
           # Ensure PR body exists
           if [ -z "${PR_BODY:-}" ] || [ "$PR_BODY" = "null" ]; then
             PR_BODY="(No PR description provided.)"
           fi
 
-          # Downgrade H1 headings to improve readability in Monday
-          CLEAN_BODY=$(echo "$PR_BODY" \
-            | sed 's/^# /## /' \
-            | sed 's/^## /### /' \
-            | sed 's/^### /#### /')
+          # Convert markdown headings (#) into bold section titles for cleaner Monday rendering
+          CLEAN_BODY=$(echo "$PR_BODY" | sed -E 's/^#+[[:space:]]*(.*)$/\n**\1**\n/')
 
-          # Format final update with proper newlines
-          UPDATE_TEXT=$(printf "### 🔗 Pull Request\n%s\n\n---\n\n%s" "$PR_URL" "$CLEAN_BODY")
+          # Build clean formatted update
+          UPDATE_TEXT=$(printf "**Pull Request**\n%s\n\n%s" "$PR_URL" "$CLEAN_BODY")
 
-          echo "Adding update..."
-
+          # Create update
           CREATE_UPDATE_PAYLOAD=$(jq -n \
             --arg query 'mutation ($itemId: ID!, $body: String!) { create_update(item_id: $itemId, body: $body) { id } }' \
             --arg itemId "$ITEM_ID" \
@@ -100,13 +88,12 @@ jobs:
             -H "Content-Type: application/json" \
             -d "$CREATE_UPDATE_PAYLOAD")
 
-          echo "$CREATE_UPDATE_RESP"
-
           UPDATE_ID=$(echo "$CREATE_UPDATE_RESP" | jq -r '.data.create_update.id')
 
           if [ -z "$UPDATE_ID" ] || [ "$UPDATE_ID" = "null" ]; then
             echo "Failed to create Monday update"
+            echo "$CREATE_UPDATE_RESP"
             exit 1
           fi
 
-          echo "Update added: $UPDATE_ID"
+          echo "Monday item created and update added successfully."
