--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Create Monday item and HTML formatted update
+      - name: Create Monday item and formatted update
         env:
           MONDAY_API_TOKEN: ${{ secrets.MONDAY_API_TOKEN }}
           MONDAY_BOARD_ID: ${{ secrets.MONDAY_PRODUCT_CHANGE_LOG_BOARD_ID }}
@@ -35,7 +35,7 @@ jobs:
             AUTHOR_NAME="$AUTHOR_LOGIN"
           fi
 
-          # 2️⃣ Build Monday column values
+          # 2️⃣ Build column values
           COLUMN_VALUES=$(jq -n \
             --arg author "$AUTHOR_NAME" \
             --arg product "Contact Centre" \
@@ -70,35 +70,66 @@ jobs:
             PR_BODY="No description provided."
           fi
 
-          # 5️⃣ Convert Markdown to Basic HTML
+          # 5️⃣ Remove markdown heading markers
+          CLEAN_BODY=$(echo "$PR_BODY" | sed -E 's/^#+[[:space:]]*//g')
 
-          HTML_BODY=$(echo "$PR_BODY" | awk '
+          # 6️⃣ Convert Markdown → HTML
+          HTML_BODY=$(echo "$CLEAN_BODY" | awk '
           BEGIN { in_list=0 }
-          /^#/ {
-            if (in_list==1) { print "</ul>"; in_list=0 }
-            sub(/^#+[ \t]*/, "")
-            print "<h3>" $0 "</h3>"
-            next
-          }
-          /^- / {
-            if (in_list==0) { print "<ul>"; in_list=1 }
-            sub(/^- /, "")
-            print "<li>" $0 "</li>"
-            next
-          }
           {
+            # Section header (short single-line heading)
+            if ($0 ~ /^[A-Za-z ]+$/ && length($0) < 50) {
+              if (in_list==1) { print "</ul>"; in_list=0 }
+              print "<h3 style=\"margin:10px 0 4px 0;\">" $0 "</h3>"
+              next
+            }
+
+            # Checked checklist
+            if ($0 ~ /^- \[[xX]\] /) {
+              if (in_list==1) { print "</ul>"; in_list=0 }
+              sub(/^- \[[xX]\] /, "")
+              print "<p style=\"margin:2px 0;\">&#10004; " $0 "</p>"
+              next
+            }
+
+            # Unchecked checklist
+            if ($0 ~ /^- \[ \] /) {
+              if (in_list==1) { print "</ul>"; in_list=0 }
+              sub(/^- \[ \] /, "")
+              print "<p style=\"margin:2px 0; color:#999;\">&#9633; " $0 "</p>"
+              next
+            }
+
+            # Standard bullet
+            if ($0 ~ /^- /) {
+              if (in_list==0) { print "<ul style=\"margin:4px 0;\">"; in_list=1 }
+              sub(/^- /, "")
+              print "<li>" $0 "</li>"
+              next
+            }
+
+            # Blank line
+            if (length($0)==0) {
+              if (in_list==1) { print "</ul>"; in_list=0 }
+              print "<br>"
+              next
+            }
+
+            # Paragraph
             if (in_list==1) { print "</ul>"; in_list=0 }
-            if (length($0)==0) { print "<br>" }
-            else { print "<p>" $0 "</p>" }
+            print "<p style=\"margin:4px 0;\">" $0 "</p>"
           }
           END {
             if (in_list==1) print "</ul>"
           }')
 
-          # 6️⃣ Build final formatted update
-          UPDATE_TEXT=$(printf "<h2>Pull Request</h2><p><a href=\"%s\">%s</a></p><hr>%s" "$PR_URL" "$PR_URL" "$HTML_BODY")
+          # 7️⃣ Build final formatted update
+          UPDATE_TEXT=$(printf "<h2 style=\"margin-bottom:6px;\">Pull Request</h2>
+<p><a href=\"%s\">%s</a></p>
+<hr style=\"margin:12px 0;\">
+%s" "$PR_URL" "$PR_URL" "$HTML_BODY")
 
-          # 7️⃣ Send update to Monday
+          # 8️⃣ Send update to Monday
           CREATE_UPDATE_PAYLOAD=$(jq -n \
             --arg query 'mutation ($itemId: ID!, $body: String!) { create_update(item_id: $itemId, body: $body) { id } }' \
             --arg itemId "$ITEM_ID" \
