Refactor Monday product change log workflow
Refactor script to improve readability and structure by adding comments and adjusting formatting.

--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -25,8 +25,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          echo "Resolving author name..."
-
+          # Resolve author name
           AUTHOR_NAME=$(curl -s \
             -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
@@ -36,9 +35,7 @@ jobs:
             AUTHOR_NAME="$AUTHOR_LOGIN"
           fi
 
-          echo "Author: $AUTHOR_NAME"
-
-          # Build column values JSON
+          # Build Monday column values
           COLUMN_VALUES=$(jq -n \
             --arg author "$AUTHOR_NAME" \
             --arg product "Contact Centre" \
@@ -47,8 +44,7 @@ jobs:
               dropdown_mm0m14q0: { labels: [$product] }
             }' | jq -c .)
 
-          echo "Creating Monday item..."
-
+          # Create Monday item
           CREATE_ITEM_PAYLOAD=$(jq -n \
             --arg query 'mutation ($boardId: ID!, $itemName: String!, $columnVals: JSON!) { create_item(board_id: $boardId, item_name: $itemName, column_values: $columnVals) { id } }' \
             --arg boardId "$MONDAY_BOARD_ID" \
@@ -69,8 +65,7 @@ jobs:
             exit 1
           fi
 
-          echo "Item created: $ITEM_ID"
-
+          # Ensure PR body exists
           if [ -z "${PR_BODY:-}" ] || [ "$PR_BODY" = "null" ]; then
             PR_BODY="No description provided."
           fi
@@ -78,16 +73,18 @@ jobs:
           # Remove markdown heading markers
           CLEAN_BODY=$(echo "$PR_BODY" | sed -E 's/^#+[[:space:]]*//g')
 
-          # Convert Markdown to HTML safely
+          # Convert Markdown to tight HTML
           HTML_BODY=$(echo "$CLEAN_BODY" | awk '
           BEGIN { in_list=0 }
           {
+            # Section headers (Overview, Objectives, etc.)
             if ($0 ~ /^[A-Za-z ]+$/ && length($0) < 60) {
               if (in_list==1) { print "</ul>"; in_list=0 }
-              print "<h3 style=\"margin:10px 0 4px 0;\">" $0 "</h3>"
+              print "<h2 style=\"margin:18px 0 6px 0;\">" $0 "</h2>"
               next
             }
 
+            # Checked checklist
             if ($0 ~ /^- \[[xX]\] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[[xX]\] /, "")
@@ -95,6 +92,7 @@ jobs:
               next
             }
 
+            # Unchecked checklist
             if ($0 ~ /^- \[ \] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[ \] /, "")
@@ -102,52 +100,14 @@ jobs:
               next
             }
 
+            # Standard bullet list
             if ($0 ~ /^- /) {
-              if (in_list==0) { print "<ul style=\"margin:4px 0;\">"; in_list=1 }
+              if (in_list==0) { print "<ul style=\"margin:6px 0; padding-left:18px;\">"; in_list=1 }
               sub(/^- /, "")
-              print "<li>" $0 "</li>"
+              print "<li style=\"margin:4px 0;\">" $0 "</li>"
               next
             }
 
+            # Skip blank lines to remove spacing bloat
             if (length($0)==0) {
-              if (in_list==1) { print "</ul>"; in_list=0 }
-              print "<br>"
               next
-            }
-
-            if (in_list==1) { print "</ul>"; in_list=0 }
-            print "<p style=\"margin:4px 0;\">" $0 "</p>"
-          }
-          END {
-            if (in_list==1) print "</ul>"
-          }')
-
-          # Build HTML safely (avoid quote breakage)
-          FINAL_HTML="<h2 style='margin-bottom:6px;'>Pull Request</h2><p><a href='$PR_URL'>$PR_URL</a></p><hr style='margin:12px 0;'>$HTML_BODY"
-
-          # Encode to base64 to avoid shell parsing issues
-          ENCODED_HTML=$(printf "%s" "$FINAL_HTML" | base64 | tr -d '\n')
-
-          # Decode before sending
-          UPDATE_TEXT=$(printf "%s" "$ENCODED_HTML" | base64 -d)
-
-          CREATE_UPDATE_PAYLOAD=$(jq -n \
-            --arg query 'mutation ($itemId: ID!, $body: String!) { create_update(item_id: $itemId, body: $body) { id } }' \
-            --arg itemId "$ITEM_ID" \
-            --arg body "$UPDATE_TEXT" \
-            '{query: $query, variables: {itemId: $itemId, body: $body}}')
-
-          CREATE_UPDATE_RESP=$(curl -s -X POST https://api.monday.com/v2 \
-            -H "Authorization: $MONDAY_API_TOKEN" \
-            -H "Content-Type: application/json" \
-            -d "$CREATE_UPDATE_PAYLOAD")
-
-          UPDATE_ID=$(echo "$CREATE_UPDATE_RESP" | jq -r '.data.create_update.id')
-
-          if [ -z "$UPDATE_ID" ] || [ "$UPDATE_ID" = "null" ]; then
-            echo "Failed to create Monday update"
-            echo "$CREATE_UPDATE_RESP"
-            exit 1
-          fi
-
-          echo "Success. Monday item created and formatted update added."
