--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          # Resolve author name
+          # Resolve author display name
           AUTHOR_NAME=$(curl -s \
             -H "Authorization: Bearer $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
@@ -35,14 +35,14 @@ jobs:
             AUTHOR_NAME="$AUTHOR_LOGIN"
           fi
 
-          # Build Monday column values
+          # Build column values JSON
           COLUMN_VALUES=$(jq -n \
             --arg author "$AUTHOR_NAME" \
             --arg product "Contact Centre" \
             '{
               text_mkv394b9: $author,
               dropdown_mm0m14q0: { labels: [$product] }
-            }' | jq -c .)
+            }')
 
           # Create Monday item
           CREATE_ITEM_PAYLOAD=$(jq -n \
@@ -70,17 +70,15 @@ jobs:
             PR_BODY="No description provided."
           fi
 
-          # Remove markdown heading markers
-          CLEAN_BODY=$(echo "$PR_BODY" | sed -E 's/^#+[[:space:]]*//g')
-
-          # Convert Markdown to tight HTML
-          HTML_BODY=$(echo "$CLEAN_BODY" | awk '
+          # Convert Markdown → Clean HTML
+          HTML_BODY=$(echo "$PR_BODY" | awk '
           BEGIN { in_list=0 }
           {
-            # Section headers (Overview, Objectives, etc.)
-            if ($0 ~ /^[A-Za-z ]+$/ && length($0) < 60) {
+            # Markdown H1 section
+            if ($0 ~ /^# /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
-              print "<h2 style=\"margin:18px 0 6px 0;\">" $0 "</h2>"
+              sub(/^# /, "")
+              print "<h2>" $0 "</h2>"
               next
             }
 
@@ -88,7 +86,7 @@ jobs:
             if ($0 ~ /^- \[[xX]\] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[[xX]\] /, "")
-              print "<p style=\"margin:2px 0;\">&#10004; " $0 "</p>"
+              print "<p>✓ " $0 "</p>"
               next
             }
 
@@ -96,18 +94,52 @@ jobs:
             if ($0 ~ /^- \[ \] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[ \] /, "")
-              print "<p style=\"margin:2px 0; color:#999;\">&#9633; " $0 "</p>"
+              print "<p>☐ " $0 "</p>"
               next
             }
 
             # Standard bullet list
             if ($0 ~ /^- /) {
-              if (in_list==0) { print "<ul style=\"margin:6px 0; padding-left:18px;\">"; in_list=1 }
+              if (in_list==0) { print "<ul>"; in_list=1 }
               sub(/^- /, "")
-              print "<li style=\"margin:4px 0;\">" $0 "</li>"
+              print "<li>" $0 "</li>"
               next
             }
 
-            # Skip blank lines to remove spacing bloat
+            # Skip blank lines (no bloat)
             if (length($0)==0) {
               next
+            }
+
+            # Paragraph
+            if (in_list==1) { print "</ul>"; in_list=0 }
+            print "<p>" $0 "</p>"
+          }
+          END {
+            if (in_list==1) print "</ul>"
+          }')
+
+          # Final HTML block
+          FINAL_HTML="<h2>Pull Request</h2><p><a href=\"$PR_URL\">$PR_URL</a></p>$HTML_BODY"
+
+          # Send update (jq handles escaping safely)
+          CREATE_UPDATE_PAYLOAD=$(jq -n \
+            --arg query 'mutation ($itemId: ID!, $body: String!) { create_update(item_id: $itemId, body: $body) { id } }' \
+            --arg itemId "$ITEM_ID" \
+            --arg body "$FINAL_HTML" \
+            '{query: $query, variables: {itemId: $itemId, body: $body}}')
+
+          CREATE_UPDATE_RESP=$(curl -s -X POST https://api.monday.com/v2 \
+            -H "Authorization: $MONDAY_API_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d "$CREATE_UPDATE_PAYLOAD")
+
+          UPDATE_ID=$(echo "$CREATE_UPDATE_RESP" | jq -r '.data.create_update.id')
+
+          if [ -z "$UPDATE_ID" ] || [ "$UPDATE_ID" = "null" ]; then
+            echo "Failed to create Monday update"
+            echo "$CREATE_UPDATE_RESP"
+            exit 1
+          fi
+
+          echo "Monday item created and update added successfully."
