--- a/.github/workflows/monday-product-change-log.yml
+++ b/.github/workflows/monday-product-change-log.yml
@@ -70,7 +70,7 @@ jobs:
             PR_BODY="No description provided."
           fi
 
-          # Convert Markdown → Clean HTML
+          # Convert Markdown → HTML (tight spacing)
           HTML_BODY=$(echo "$PR_BODY" | awk '
           BEGIN { in_list=0 }
           {
@@ -78,7 +78,7 @@ jobs:
             if ($0 ~ /^# /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^# /, "")
-              print "<h2>" $0 "</h2>"
+              print "<h2 style=\"margin:14px 0 4px 0;\">" $0 "</h2>"
               next
             }
 
@@ -86,7 +86,7 @@ jobs:
             if ($0 ~ /^- \[[xX]\] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[[xX]\] /, "")
-              print "<p>✓ " $0 "</p>"
+              print "<p style=\"margin:2px 0;\">✓ " $0 "</p>"
               next
             }
 
@@ -94,35 +94,35 @@ jobs:
             if ($0 ~ /^- \[ \] /) {
               if (in_list==1) { print "</ul>"; in_list=0 }
               sub(/^- \[ \] /, "")
-              print "<p>☐ " $0 "</p>"
+              print "<p style=\"margin:2px 0;\">☐ " $0 "</p>"
               next
             }
 
             # Standard bullet list
             if ($0 ~ /^- /) {
-              if (in_list==0) { print "<ul>"; in_list=1 }
+              if (in_list==0) { print "<ul style=\"margin:4px 0; padding-left:18px;\">"; in_list=1 }
               sub(/^- /, "")
-              print "<li>" $0 "</li>"
+              print "<li style=\"margin:3px 0;\">" $0 "</li>"
               next
             }
 
-            # Skip blank lines (no bloat)
+            # Skip blank lines
             if (length($0)==0) {
               next
             }
 
             # Paragraph
             if (in_list==1) { print "</ul>"; in_list=0 }
-            print "<p>" $0 "</p>"
+            print "<p style=\"margin:4px 0;\">" $0 "</p>"
           }
           END {
             if (in_list==1) print "</ul>"
           }')
 
           # Final HTML block
-          FINAL_HTML="<h2>Pull Request</h2><p><a href=\"$PR_URL\">$PR_URL</a></p>$HTML_BODY"
+          FINAL_HTML="<h2 style='margin:0 0 4px 0;'>Pull Request</h2><p style='margin:0 0 12px 0;'><a href=\"$PR_URL\">$PR_URL</a></p>$HTML_BODY"
 
-          # Send update (jq handles escaping safely)
+          # Send update (jq safely escapes content)
           CREATE_UPDATE_PAYLOAD=$(jq -n \
             --arg query 'mutation ($itemId: ID!, $body: String!) { create_update(item_id: $itemId, body: $body) { id } }' \
             --arg itemId "$ITEM_ID" \
